[project]
name = "ba-server"
version = "0.1.0"
description = "BroadAxis RFP/RFQ Management Platform with FastAPI Backend and React Frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.60.0",
    "arxiv>=2.2.0",
    "asyncio>=3.4.3",
    "docx>=0.2.4",
    "fastapi>=0.104.0",
    "fpdf>=1.7.2",
    "langchain-huggingface>=0.3.1",
    "markdown>=3.8.2",
    "mcp[cli]>=1.12.2",
    "nest-asyncio>=1.6.0",
    "pinecone>=7.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.6",
    "react>=4.3.0",
    "reportlab>=4.4.3",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "tavily-python>=0.7.10",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]
